:bug: - fix: fixed the overlapping of the icon inside stackctx

--- a/src/components/form/formcontrol/formcontrol.scss
+++ b/src/components/form/formcontrol/formcontrol.scss
@@ -8,11 +8,6 @@
     width: 100%;
   }
 
-  .mykn-stackctx:has(.mykn-icon) .mykn-input,
-  .mykn-stackctx:has(.mykn-icon) .mykn-select {
-    padding-right: 30px;
-  }
-
   &--direction-horizontal {
     align-items: center;
     flex-direction: row;
